--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "",
   "license": "ISC",
+  "bin": "./index.js",
   "dependencies": {
     "async": "^0.9.0",
     "blessed": "0.0.51",
