--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "blessed": "0.0.51",
-    "blessed-contrib": "git://github.com/yaronn/blessed-contrib.git#multi-line-chart",
+    "blessed-contrib": "^2.0.0",
     "chalk": "^1.0.0",
     "optimist": "^0.6.1",
     "request": "^2.54.0"
