--- a/samples/truapi/simple-script/package.json
+++ b/samples/truapi/simple-script/package.json
@@ -1,14 +1,4 @@
 {
   "name": "test",
-  "version": "0.0.1",
-  "description": "",
-  "main": "tapi-test.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-   
-  }
+  "version": "0.0.1"  
 }
