--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "load-ascii",
+  "name": "truload",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Hewlett-Packard Development Company, L.P.",
   "license": "MIT",
   "bin": "./index.js",
   "dependencies": {
